Functions and docstrings for plotting helpers

--- a/app/templates/master.html
+++ b/app/templates/master.html
@@ -56,7 +56,7 @@
 <div class="container">
     {% block content %}
         <div class="page-header">
-            <h1 class="text-center">Overview of Training Results (F1-score)</h1>
+            <h1 class="text-center">Overview of Training Results</h1>
         </div>
     {% endblock %}
 
